Implement <Class>.valueOf()